--- a/src/backend/GnuCashBudget.Application/GnuCashBudget.Application.csproj
+++ b/src/backend/GnuCashBudget.Application/GnuCashBudget.Application.csproj
@@ -18,4 +18,10 @@
       <PackageReference Include="MediatR" Version="12.0.1" />
     </ItemGroup>
 
+
+
+    <ItemGroup>
+      <Folder Include="Services\Impl\" />
+    </ItemGroup>
+
 </Project>
