implement interface for setting budgets

--- a/src/backend/GnuCashBudget.Api/GnuCashBudget.Api.csproj
+++ b/src/backend/GnuCashBudget.Api/GnuCashBudget.Api.csproj
@@ -15,6 +15,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\GnuCashBudget.Application\GnuCashBudget.Application.csproj" />
+      <ProjectReference Include="..\GnuCashBudget.Data.EntityFramework\GnuCashBudget.Data.EntityFramework.csproj" />
       <ProjectReference Include="..\GnuCashBudget.GnuCashData.EntityFramework\GnuCashBudget.GnuCashData.EntityFramework.csproj" />
     </ItemGroup>
 </Project>
