--- a/src/backend/GnuCashBudget.Api/appsettings.Development.json
+++ b/src/backend/GnuCashBudget.Api/appsettings.Development.json
@@ -6,6 +6,7 @@
     }
   },
   "Source": {
-    "DatabaseFile": "/Users/fv/dev/repos/gnucash-budget/testfiles/gnucash_sqlite.gnucash"
+    "DatabaseFile": "/Users/fv/dev/repos/gnucash-budget/testfiles/gnucash_sqlite.gnucash",
+    "BudgetsFile": "/Users/fv/dev/repos/gnucash-budget/testfiles/gnucash_sqlite.budgets"
   }
 }
