--- a/src/budget-fe/package.json
+++ b/src/budget-fe/package.json
@@ -17,7 +17,7 @@
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
-    "react-data-grid": "^7.0.0-beta.34",
+    "react-data-grid": "7.0.0-beta.36",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
