--- a/src/backend/GnuCashBudget.Api/GnuCashBudget.Api.csproj
+++ b/src/backend/GnuCashBudget.Api/GnuCashBudget.Api.csproj
@@ -8,14 +8,13 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.0"/>
-        <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.9" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.10" />
         <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="7.0.4" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\GnuCashBudget.Application\GnuCashBudget.Application.csproj" />
-      <ProjectReference Include="..\GnuCashBudget.Data.EntityFramework\GnuCashBudget.Data.EntityFramework.csproj" />
-      <ProjectReference Include="..\GnuCashBudget.GnuCashData.EntityFramework\GnuCashBudget.GnuCashData.EntityFramework.csproj" />
+      <ProjectReference Include="..\GnuCashBudget.Features\GnuCashBudget.Features.csproj" />
+      <ProjectReference Include="..\GnuCashBudget.SharedDomain\GnuCashBudget.SharedDomain.csproj" />
     </ItemGroup>
 </Project>
