feat: Add ContinuationToken support

--- a/src/backend/GnuCashBudget.Adapter.Example/appsettings.Development.json
+++ b/src/backend/GnuCashBudget.Adapter.Example/appsettings.Development.json
@@ -8,7 +8,6 @@
   "ExampleOptions": {
     "Expenses": [
       {
-        "transactionId": "EXP123456789",
         "amount": 50.00,
         "currency": "USD",
         "category": "Groceries",
@@ -19,7 +18,6 @@
         "location": "123 Main St, City, Country"
       },
       {
-        "transactionId": "EXP987654321",
         "amount": 20.00,
         "currency": "USD",
         "category": null,
@@ -28,6 +26,16 @@
         "merchant": "XYZ Restaurant",
         "paymentMethod": "Credit Card",
         "location": "456 Elm St, City, Country"
+      },
+      {
+        "amount": 760.00,
+        "currency": "EUR",
+        "category": "Groceries",
+        "description": "Grocery shopping for the week",
+        "timestamp": "2024-02-02T12:00:00Z",
+        "merchant": "ABC Supermarket",
+        "paymentMethod": "Debit Card",
+        "location": "123 Main St, City, Country"
       }
     ]
   }
