feat: Add PaymentMethod enum instead of string

--- a/src/backend/GnuCashBudget.Adapter.Example/appsettings.Development.json
+++ b/src/backend/GnuCashBudget.Adapter.Example/appsettings.Development.json
@@ -14,7 +14,7 @@
         "description": "Grocery shopping for the week",
         "timestamp": "2024-04-02T12:00:00Z",
         "merchant": "ABC Supermarket",
-        "paymentMethod": "Debit Card",
+        "paymentMethod": "Cash",
         "location": "123 Main St, City, Country"
       },
       {
@@ -24,7 +24,7 @@
         "description": null,
         "timestamp": "2024-03-30T13:30:00Z",
         "merchant": "XYZ Restaurant",
-        "paymentMethod": "Credit Card",
+        "paymentMethod": "CreditCard",
         "location": "456 Elm St, City, Country"
       },
       {
@@ -34,7 +34,7 @@
         "description": "Grocery shopping for the week",
         "timestamp": "2024-02-02T12:00:00Z",
         "merchant": "ABC Supermarket",
-        "paymentMethod": "Debit Card",
+        "paymentMethod": "DebitCard",
         "location": "123 Main St, City, Country"
       }
     ]
